[package]
name = "gruik-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }
duration-string = { version = "0.3.0", features = ["serde"] }
encoding = { version = "0.2.33" }
feed-rs = { version = "1.3.0" }
loirc = { version = "0.2.0" }
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.107" }
serde_yaml = { version = "0.9.25" }
sha2 = { version = "0.10.8" }
ureq = { version = "2.7.1" }

[profile.release]
strip=true	# Automatically strip symbols from the binary
lto=true	# Enable link time optimization
