[package]
name = "gruik-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2", features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
duration-string = { version = "0.3", features = ["serde"] }
encoding = { version = "0.2" }
feed-rs = { version = "2" }
loirc = { version = "0.2" }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
ureq = { version = "2" }

[profile.release]
strip = true	    # Automatically strip symbols from the binary
lto = "fat"         # Enable link time optimization
codegen-units = 1
